tests/negative/test_fnc_redef_local.orb
fnc foo () () {};

fnc main () () {
    fnc::global foo () () {};
};